[package]
name = "expander-rs-keccak256"
version = "0.1.0"
edition = "2021"

[dependencies]


rand = "0.8.5"
chrono = "0.4"
ethnum = "1.5.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = [
    "bits",
] }
arith = { git = "https://github.com/PolyhedraZK/Expander", rev = "fb82b212" }
expander-rs = { git = "https://github.com/PolyhedraZK/Expander", rev = "fb82b212" }
sha2 = "0.10.8"
expander_compiler = { git = "https://github.com/vivianjeng/ExpanderCompilerCollection" }
